// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom product
</span>
`;

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 1 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Cofee Mug - Sin imagen
  </span>
</div>
`;

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 2 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Cofee Mug - Con Imagen
  </span>
</div>
`;
